переделал под SOLID